@@ -1,8 +1,10 @@
 package org.springeel.oneclickrecipe.domain.cart.service.impl;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.springeel.oneclickrecipe.domain.cart.dto.service.request.CartAddServiceRequestDto;
+import org.springeel.oneclickrecipe.domain.cart.dto.service.response.CartReadAllResponseDto;
+import org.springeel.oneclickrecipe.domain.cart.dto.service.response.CartReadResponseDto;
 import org.springeel.oneclickrecipe.domain.cart.entity.Cart;
 import org.springeel.oneclickrecipe.domain.cart.repository.CartRepository;
 import org.springeel.oneclickrecipe.domain.cart.service.CartService;
@@ -10,6 +12,7 @@ import org.springeel.oneclickrecipe.domain.recipefood.entity.RecipeFood;
 import org.springeel.oneclickrecipe.domain.recipefood.repository.RecipeFoodRepository;
 import org.springeel.oneclickrecipe.domain.user.entity.User;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 @RequiredArgsConstructor
 @Service
@@ -18,6 +21,7 @@ public class CartServiceImpl implements CartService {
     private final CartRepository cartRepository;
     private final RecipeFoodRepository recipeFoodRepository;
 
+    @Transactional
     @Override
     public void clearCart(User user) {
         // 사용자의 장바구니 데이터를 삭제
@@ -25,16 +29,43 @@ public class CartServiceImpl implements CartService {
     }
 
     @Override
-    public void addCartItems(User user, List<Long> recipeFoodIds) {
+    public void addCartFoods(User user, CartAddServiceRequestDto recipeFoodIds) {
         // 한 번의 쿼리로 모든 RdcipeFood 엔티티를 가져옴
-        List<RecipeFood> recipeFoods = recipeFoodRepository.findAllByIdIn(recipeFoodIds);
+        List<RecipeFood> recipeFoods = recipeFoodRepository.findAllById(
+            recipeFoodIds.recipeFoodIds());
 
         // 각 RecipeFood에 대해 Cart 엔티티를 생성하고 저장
         List<Cart> cartItems = recipeFoods.stream()
-            .map(recipeFood -> new Cart(user, recipeFood))
-            .collect(Collectors.toList());
+            .map(recipeFood -> Cart.builder()
+                .user(user)
+                .recipeFood(recipeFood)
+                .build())
+            .toList();
 
         cartRepository.saveAll(cartItems);
+    }
+
+    @Override
+    public CartReadAllResponseDto getCart(User user) {
+        List<Cart> carts = cartRepository.findAllByUser(user);
+        int totalPrice = carts.stream()
+            .mapToInt(cart -> cart.getRecipeFood().getFood().getPrice() * cart.getRecipeFood()
+                .getAmount())
+            .sum();
+
+        List<CartReadResponseDto> foods = carts.stream()
+            .map(cart -> CartReadResponseDto.builder()
+                .id(cart.getRecipeFood().getId())
+                .name(cart.getRecipeFood().getFood().getName())
+                .quantity(cart.getRecipeFood().getAmount())
+                .price(cart.getRecipeFood().getAmount() * cart.getRecipeFood().getFood().getPrice())
+                .unit(cart.getRecipeFood().getFood().getUnit())
+                .build())
+            .toList();
+        return CartReadAllResponseDto.builder()
+            .totalPrice(totalPrice)
+            .foods(foods)
+            .build();
     }
 
 }
